<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_double_all"
    tools:ignore="ExtraText">


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:hint="@string/pleaseInputName"
        android:paddingLeft="@dimen/padding_all"
        android:paddingRight="@dimen/padding_all"
        android:drawablePadding="@dimen/padding_eight"
        android:layout_marginTop="32dp"
        android:singleLine="true"
        android:textColorHint="@color/txt_shadow"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:hint="@string/pleaseInputPass"
        android:inputType="textPassword"
        android:paddingLeft="@dimen/padding_all"
        android:paddingRight="@dimen/padding_all"
        android:drawablePadding="@dimen/padding_eight"
        android:layout_marginTop="16dp"
        android:textColorHint="@color/txt_shadow"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingLeft="@dimen/padding_all"
        android:paddingRight="@dimen/padding_all"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="注册"
            android:gravity="end"
            style="@style/txt_black_normal"
            android:textColor="@color/theme_color"/>
    </LinearLayout>

    <Button
        android:layout_marginTop="24dp"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/load"
        style="@style/txt_white_normal"
        android:background="@drawable/style_btn_khaki_normal" />
</LinearLayout>