<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/all_bg_gary"
    tools:context="zth.com.gezhi.zth.com.gezhi.module.setting.SettingMainActivity">

    <TextView
        style="@style/txt_black_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_all"
        android:text="@string/volume" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_all"
        android:paddingRight="@dimen/padding_all">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_voice_low" />

        <SeekBar
            android:id="@+id/seek_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_all"
            android:layout_marginRight="@dimen/padding_all"
            android:layout_weight="1"
            android:maxHeight="6dp"
            android:minHeight="6dp"
            android:progress="8"
            android:progressDrawable="@drawable/style_seekbar_bg"
            android:thumb="@drawable/style_seek_bar_thumb_bg"
            android:thumbOffset="9dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_voice_high" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight"
        android:layout_marginTop="@dimen/padding_all"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/linear_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_linear_click_bg"
        android:gravity="center"
        android:clickable="true"
        android:orientation="horizontal">

        <TextView
            style="@style/txt_black_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_all"
            android:text="@string/changePwd" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_all"
            android:src="@mipmap/ic_next" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight"
        android:background="@color/line_color" />

    <LinearLayout
        android:id="@+id/linear_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_linear_click_bg"
        android:gravity="center"
        android:clickable="true"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            style="@style/txt_black_normal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_all"
            android:text="@string/helpIntroduce" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_all"
            android:src="@mipmap/ic_next" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lineHeight"
        android:visibility="gone"
        android:background="@color/line_color" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btnHeight"
        android:layout_margin="@dimen/padding_all"
        android:text="@string/exitLoad"
        android:background="@drawable/style_btn_khaki_normal"/>


    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/txt_black_shadow"
        android:layout_marginBottom="@dimen/padding_all"
        android:gravity="center"/>



</LinearLayout>
